Compiler/src/main/java/Testing/Tests/SemanticTests/failing/InvalidHeritance.ru
struct A : IO{
}
impl A{
.(){}}
start{}